Editor/Third/native/ImAllGui/cimnodes/cimnodes.h

typedef int ImNodesMiniMapLocation;
CIMGUI_API void imnodes_MiniMapSimple(const float minimap_size_fraction, const ImNodesMiniMapLocation location);
CIMGUI_API bool imnodes_IsLinkSelected(int link_id);