Editor/Third/ImGui/ImNodes.NET/Generated/ImNodesNative.gen.cs

        [DllImport("EditorNatives", CallingConvention = CallingConvention.Cdecl)]
        public static extern Style* Style_Style();

        // Custom:
        [DllImport("EditorNatives", CallingConvention = CallingConvention.Cdecl)]
        public static extern void imnodes_MiniMapSimple(float minimap_size_fraction, int location);
        
        [DllImport("EditorNatives", CallingConvention = CallingConvention.Cdecl)]
        public static extern byte imnodes_IsLinkSelected(int id);
    }
}
